# DiffusionGLS

./: .gitignore  README.md  benchmark_parallel.py  profile_dfit.py  pyproject.toml  reproduce_error.py  reproduce_segment_error.py  reproduce_singular.py  setup.py  test_import.py  verify_optimization.py  verify_output_units.py  verify_plots.py  verify_reshape.py
Dfit/: Dfit.py  __init__.py  math_utils.py  trajectory_reader.py
Dfit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Example/: example.ipynb  run_mda_analysis.py  run_publication_tc_suggestion.py
Example/trajs/: .traj_O2.xtc_offsets.npz  .traj_WAT.xtc_offsets.npz  O2_32.tpr  WAT_32.tpr
report/: AGENTS.md  MM_DM.docx  MM_DM_refined.docx  build_diffusion_docx.py  diffusion_DM.docx  diffusion_DM_edited.docx  diffusion_DM_review_notes.md  diffusion_DM_source.html  diffusion_DM_source.rtf  diffusion_results.xlsx  literature_pet_pef_diffusivity_report1.md  plot_diffusion_summary.py
report/.cache/fontconfig/: 00d5189c1d5ced4af9bb23cbaa9b1e94-le64.cache-9  84c0f976e30e948e99073af70f4ae876-le64.cache-9
report/.cache/mplconfig/: fontlist-v390.json
report/PET_PEF_PAPER/: Manuscript_DM.docx  Manuscript_old.docx  SupplementaryMaterials_old.docx
report/PET_PEF_PAPER/FIGURES/: Figure_Propr_Mecc.pptx
report/diffusion_figures/: diffusion_measurements.csv  diffusion_ratios.csv
tests/: conftest.py  test_cluster_statistics.py  test_dfit.py  test_persistence.py  test_tc_suggestion.py  test_trajectory_reader_mda_multi.py
