
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Dfit"
version = "0.2.1"
description = "Diffusion Coefficient Fitting using Generalized Least Squares"
readme = "README.md"
authors = [
  { name="Sören von Bülow", email="soeren.buelow@biophys.mpg.de" },
]
license = { text = "GPLv3" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "MDAnalysis",
    "matplotlib",
    "progressbar2",
]

[project.urls]
"Homepage" = "https://github.com/hummerlab/DiffusionGLS"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
